Fix images height on mobile; fix line-height on titles

--- a/assets/style/index.styl
+++ b/assets/style/index.styl
@@ -69,9 +69,11 @@ img
 // Typography
 h1, .h1
     font-weight 900
+    line-height 35px
 
 h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6
     font-weight 700
+    line-height 35px
 
 .uppercase
     text-transform uppercase
